# CMakeSandbox

./: README.md  usage.sh
0_basicFeatures/: CMakeLists.txt  Makefile  cleanCMake.md
1_basicProject/: CMakeLists.txt  Config.h.in  main.cpp
1_basicProject/modules/: CMakeLists.txt
1_basicProject/modules/externalArtifacts/: CMakeLists.txt
1_basicProject/modules/interfaceLibrary/: CMakeLists.txt
1_basicProject/modules/interfaceLibrary/implementation/: CMakeLists.txt  interfaceImplLib.cpp  interfaceImplLib.hpp
1_basicProject/modules/interfaceLibrary/interface/: CMakeLists.txt  interfaceLib.hpp
1_basicProject/modules/objectLibrary/: CMakeLists.txt
1_basicProject/modules/objectLibrary/objectArtifacts/: CMakeLists.txt  objectArt.cpp  objectArt.hpp
1_basicProject/modules/objectLibrary/objectTarget/: CMakeLists.txt  objectLib.cpp  objectLib.hpp
1_basicProject/modules/sharedLibrary/: CMakeLists.txt  sharedLib.cpp  sharedLib.hpp  util.cpp  util.hpp
1_basicProject/modules/staticLibrary/: CMakeLists.txt  statLib.cpp  statLib.hpp
1_basicProject/tests/: CMakeLists.txt  processTest.cpp
